# delilah-agentic-v2

./: .dockerignore  .gitignore  ACTION_PLAN.md  DEVELOPMENT_STATUS.md  DEVELOPMENT_TRACKING.md  QUICKSTART.md  QUICK_FIX.md  README.md  RESUMING.md  SNAPSHOT.md  alembic.ini  api.py  check_env.py  cli.py  config.py  coordinator.py  docker-compose.yml  init.sql  main.py  package-lock.json  pg_hba.conf  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
agents/: README.md  __init__.py  analysis_agent.py  assessment_agent.py  base.py  client_manager.py  documentation_agent.py  pdf_parser_agent.py  report_agent.py  therapist_manager.py
alembic/: env.py
api/: error_routes.py  router.py
backend/: Dockerfile  app.py  auth.py  config.py  main.py  requirements.txt
coordinator/: __init__.py  coordinator.py  error_handler.py  queue_manager.py  workflow_manager.py
database/: __init__.py  config.py  database.py  db.py  error_models.py  models.py  service.py  session.py
docs/: API.md  CONTRIBUTING.md  CURRENT_INSIGHTS.md  CURRENT_STATE.md  CURRENT_STATUS.md  DEVELOPER_GUIDE.md  DEVELOPER_NARRATIVE.md  DEVELOPMENT_ENVIRONMENT.md  DEVELOPMENT_NARRATIVE.md  DEVELOPMENT_TRACKING.md  SECURITY.md  TROUBLESHOOTING.md  UPCOMING_FEATURES.md
frontend/: Dockerfile  README.md  delete-file.js  index.html  package-lock.json  package.json  reset-deps.sh  tailwind.config.js  vite.config.ts
scripts/: cleanup.sh  create_feature_branch.sh  fix_typescript_issues.sh  session_manager.py  update_assessment_form.sh
templates/: assessment_template.py  default.jinja2  (+1 more)
(+183 files in other folders)
